# goldminer

./: README.md
block-hash-testbench/: Cargo.toml
block-hash-testbench/src/: acc.rs  main.rs  sha256.rs  sha256_hw.rs  sha256_sw.rs
greybox_tmp/: cbx_args.txt
hw/cocotb/model/: sha256_model.py
hw/cocotb/tests/: Makefile  dump.vcd  results.xml
hw/ip/: bram.bsf  bram.qip  bram.v  bram_bb.v  bram_inst.v  bram_syn.v
hw/ip/greybox_tmp/: cbx_args.txt
hw/quartus/: Makefile  acc.sv  auto.sh  sha256_acc_hw.tcl  sha256_module.sv  soc_system.qpf  soc_system.qsf  soc_system.qsys  soc_system.sopcinfo  soc_system_assignment_defaults.qdf  soc_system_top.sv
hw/quartus/db/: .cmp.kpt  soc_system.(0).cnf.cdb  soc_system.(0).cnf.hdb  (+154 more)
hw/reference/: a.out  auto.sh  miner-O0.s  miner.c  miner.s  sha256.c  sha256.h  sha256.h.gch  sha256.s  sha256_test.c
hw/rtl/: acc.sv  acc_top.sv  bram.qip  bram.v  bram_inst.v  bram_syn.v  collatz.sv  mem_k.hex  sha256_incl.svh  sha256_module.sv  text2hex.py
hw/rtl-regmem/: sha256_module.sv
hw/tb/: hash_top_tb.sv  simplified_sha256_tb.sv
hw/vsim/: hash_top_tb.sv  hash_top_tb.sv.bak  sha256_acc.cr.mti  sha256_acc.mpf  vsim.wlf  wave.do
lab1-fork/: .gitignore  README.md  collatz.cpp  collatz.gtkw  collatz.sv  hex7seg.sv  lab1.sv  range.sv
lab3-fork/: README.md  hello.c  sha256.c  sha256.h  soc_system_top.sv  vga_ball.c  vga_ball.h  vga_ball.sv
rust-caller/: Cargo.toml
rust-caller/src/: main.rs
sw/: Makefile  acc.c  acc.h  miner.c  miner.h  miner.s  sha256.c  sha256.h
sw/mining/: package-lock.json  package.json
(+62 files in other folders)
