[package]
name = "sha256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
hex = "0.4.3"
libc = "0.2.142"
nix = { version = "0.26.2", features = ["ioctl"] }
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
